feat: tackle the problem in the exception mapper