@@ -1,10 +1,7 @@
 package net.ripe.db.whois.api.httpserver;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.google.common.collect.Lists;
 import net.ripe.db.whois.api.rest.RestMessages;
-import net.ripe.db.whois.api.rest.domain.ErrorMessage;
-import net.ripe.db.whois.api.rest.domain.WhoisResources;
 import net.ripe.db.whois.common.Message;
 import net.ripe.db.whois.common.Messages;
 import net.ripe.db.whois.common.source.IllegalSourceException;
@@ -17,19 +14,32 @@ import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Component;
 import org.xml.sax.SAXParseException;
 
+import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.ws.rs.WebApplicationException;
+import javax.ws.rs.core.Context;
+import javax.ws.rs.core.HttpHeaders;
+import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.ext.ExceptionMapper;
 import javax.ws.rs.ext.Provider;
 import javax.xml.bind.UnmarshalException;
-import java.util.Arrays;
 import java.util.List;
+
+import static net.ripe.db.whois.api.rest.RestServiceHelper.createErrorObjectEntity;
+import static net.ripe.db.whois.api.rest.RestServiceHelper.createErrorStringEntity;
+import static net.ripe.db.whois.api.rest.RestServiceHelper.createErrorWhoisEntity;
 
 @Provider
 @Component
 public class DefaultExceptionMapper implements ExceptionMapper<Exception> {
     private static final Logger LOGGER = LoggerFactory.getLogger(DefaultExceptionMapper.class);
+
+    @Context
+    private HttpHeaders headers;
+
+    @Context
+    private HttpServletRequest request;
 
     @Override
     public Response toResponse(final Exception exception) {
@@ -46,7 +56,7 @@ public class DefaultExceptionMapper implements ExceptionMapper<Exception> {
             if (exception.getCause() instanceof UnmarshalException) {
                 if (exception.getCause().getCause() instanceof SAXParseException) {
                     return Response.status(Response.Status.BAD_REQUEST).entity(
-                        createErrorEntity(RestMessages.xmlProcessingError((SAXParseException)exception.getCause().getCause()))).build();
+                            createErrorObjectEntity(RestMessages.xmlProcessingError((SAXParseException)exception.getCause().getCause()))).build();
                 }
             }
 
@@ -55,7 +65,7 @@ public class DefaultExceptionMapper implements ExceptionMapper<Exception> {
 
         if (exception instanceof JsonProcessingException) {
             return Response.status(Response.Status.BAD_REQUEST).entity(
-                createErrorEntity(RestMessages.jsonProcessingError((JsonProcessingException)exception))).build();
+                    createErrorObjectEntity(RestMessages.jsonProcessingError((JsonProcessingException)exception))).build();
         }
 
         if (exception instanceof EmptyResultDataAccessException) {
@@ -64,10 +74,10 @@ public class DefaultExceptionMapper implements ExceptionMapper<Exception> {
 
         if (exception instanceof QueryException) {
             if (((QueryException) exception).getCompletionInfo() == QueryCompletionInfo.BLOCKED) {
-                return Response.status(Response.Status.TOO_MANY_REQUESTS).entity(createErrorEntity(((QueryException) exception).getMessages())).build();
+                return Response.status(Response.Status.TOO_MANY_REQUESTS).entity(createErrorWhoisEntity(((QueryException) exception).getMessages())).build();
             }
 
-            return Response.status(Response.Status.BAD_REQUEST).entity(createErrorEntity(((QueryException) exception).getMessages())).build();
+            return Response.status(Response.Status.BAD_REQUEST).entity(createErrorWhoisEntity(((QueryException) exception).getMessages())).build();
         }
 
         if (exception instanceof IllegalStateException) {
@@ -75,32 +85,15 @@ public class DefaultExceptionMapper implements ExceptionMapper<Exception> {
                 return Response.status(Response.Status.BAD_REQUEST).build();
             }
         }
-
         LOGGER.error("Unexpected", exception);
         return Response.status(Response.Status.INTERNAL_SERVER_ERROR).entity(createErrorEntity(exception.getMessage())).build();
     }
 
     // helper methods
-
-    private WhoisResources createErrorEntity(final String message) {
-        return createErrorEntity(new Message(Messages.Type.ERROR, message));
-    }
-
-    private WhoisResources createErrorEntity(final Message ... messages) {
-        return createErrorEntity(Arrays.asList(messages));
-    }
-
-    // TODO: [AH] no locator URI for error messages
-    private WhoisResources createErrorEntity(final Iterable<Message> messages) {
-        final WhoisResources whoisResources = new WhoisResources();
-
-        final List<ErrorMessage> errorMessages = Lists.newArrayList();
-        for (Message message : messages) {
-            errorMessages.add(new ErrorMessage(message));
+    public Object createErrorEntity(final String message) {
+        if (headers.getAcceptableMediaTypes().contains(MediaType.TEXT_PLAIN_TYPE)){
+            return createErrorStringEntity(request, List.of(new Message(Messages.Type.ERROR, message)));
         }
-        whoisResources.setErrorMessages(errorMessages);
-        whoisResources.includeTermsAndConditions();
-        return whoisResources;
+        return createErrorObjectEntity(new Message(Messages.Type.ERROR, message));
     }
-
 }
